force-app/main/default/objects/Feature_Recommendation__c/Feature_Recommendation__c.object-meta.xml
<CustomObject>
    <description>Product Recommendation List imported from Sentry based on Account product feature activity usage.</description>
    <label>Feature Recommendation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>