force-app/main/default/objects/Feature_Recommendation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feature Recommendations</relationshipLabel>
    <relationshipName>Feature_Recommendations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>