force-app/main/default/objects/Feature_Recommendation__c/fields/Account_Feature__c.field-meta.xml
<CustomField>
    <fullName>Account_Feature__c</fullName>
    <externalId>true</externalId>
    <label>Account Feature</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>