force-app/main/default/objects/Feature_Recommendation__c/fields/Contact_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Response_Date__c</fullName>
    <label>First Response Date</label>
    <type>Date</type>
</CustomField>