force-app/main/default/objects/Feature_Recommendation__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <label>Feature Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Native AWS</fullName>
            </value>
            <value>
                <fullName>Cloud Native Azure</fullName>
            </value>
            <value>
                <fullName>Cloud Native GCP</fullName>
            </value>
            <value>
                <fullName>Radar</fullName>
            </value>
            <value>
                <fullName>Sonar</fullName>
            </value>
            <value>
                <fullName>Linux Filesets</fullName>
            </value>
            <value>
                <fullName>NAS</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>Windows Filesets</fullName>
            </value>
            <value>
                <fullName>Windows VG</fullName>
            </value>
            <value>
                <fullName>MFA Enabled</fullName>
            </value>
            <value>
                <fullName>CloudOut S3Compatible</fullName>
            </value>
            <value>
                <fullName>O365 Shared Mailbox</fullName>
            </value>
            <value>
                <fullName>VMC</fullName>
            </value>
            <value>
                <fullName>MV PostgreSql</fullName>
            </value>
            <value>
                <fullName>CloudOut Azure</fullName>
            </value>
            <value>
                <fullName>MV SapHanaLog</fullName>
            </value>
            <value>
                <fullName>CloudOut HDS</fullName>
            </value>
            <value>
                <fullName>App Flows</fullName>
            </value>
            <value>
                <fullName>VMware</fullName>
            </value>
            <value>
                <fullName>MV RecoverX</fullName>
            </value>
            <value>
                <fullName>MV SapHana</fullName>
            </value>
            <value>
                <fullName>Nutanix</fullName>
            </value>
            <value>
                <fullName>Archive Consolidation</fullName>
            </value>
            <value>
                <fullName>CloudOut Nfs</fullName>
            </value>
            <value>
                <fullName>OnDemand Crawl</fullName>
            </value>
            <value>
                <fullName>CloudOut Qstar</fullName>
            </value>
            <value>
                <fullName>Sap Hana Database</fullName>
            </value>
            <value>
                <fullName>SSO Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>