force-app/main/default/objects/Feature_Recommendation__c/fields/First_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Email_Sent_Date__c</fullName>
    <label>First Email Sent Date</label>
    <type>Date</type>
</CustomField>