force-app/main/default/objects/Feature_Recommendation__c/fields/First_Use_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Use_Date__c</fullName>
    <label>First Use Date</label>
    <type>Date</type>
</CustomField>