force-app/main/default/objects/Feature_Recommendation__c/fields/Recommended_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Date__c</fullName>
    <description>Date which the feature was recommended by SentryAI</description>
    <label>Recommended Date</label>
    <type>Date</type>
</CustomField>