force-app/main/default/objects/Feature_Recommendation__c/fields/Suspended_Date__c.field-meta.xml
<CustomField>
    <fullName>Suspended_Date__c</fullName>
    <label>Suspended Date</label>
    <type>DateTime</type>
</CustomField>