force-app/main/default/objects/Feature_Recommendation__c/fields/Suspended_Reason__c.field-meta.xml
<CustomField>
    <fullName>Suspended_Reason__c</fullName>
    <label>Suspended Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>