force-app/main/default/objects/Feature_Recommendation__c/validationRules/Suspension_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Suspension_Reason</fullName>
    <active>true</active>
    <description>Suspended reason is necessary for suspended status</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Suspended&quot;), ISBLANK(Suspended_Reason__c))</errorConditionFormula>
    <errorMessage>Please enter suspended reason</errorMessage>
</ValidationRule>