force-app/main/default/objects/Feature_Recommendation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Feature_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Recommended_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>